# robotics-software-engineer

./: .gitignore
Project1/: CMakeLists.txt  README.md
Project1/model/Akkobot/: model.config  model.sdf
Project1/model/KoLabHouse/: model.config  model.sdf
Project1/script/: welcome_message.cpp
Project1/world/: KoWorld.world
Project2/ball_chaser/: CMakeLists.txt  package.xml
Project2/my_robot/launch/: robot_description.launch  world.launch
Project2/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
Project2/my_robot/worlds/: KoWorld.world  empty.world
Project3/Screenshots/: Localization_fixed.webm
Project3/src/my_robot/: README.txt
Project3/src/my_robot/launch/: amcl.launch  world.launch
Project3/src/my_robot/maps/: map.yaml
Project3/src/my_robot/worlds/: World.world
Project3/src/pgm_map_creator/msgs/: CMakeLists.txt
Project3/src/pgm_map_creator/world/: KoWorld.world
Project4/: READEME.md
Project4/catkin_ws/src/my_robot/launch/: amcl.launch  rtabmap.db  world.launch
Project4/catkin_ws/src/my_robot/urdf/: my_robot.xacro
ball_chaser/: CMakeLists.txt
ball_chaser/src/: drive_bot.cpp  process_image.cpp
my_robot/launch/: world.launch
world/: myworld.world
